--- a/public/style.css
+++ b/public/style.css
@@ -310,6 +310,10 @@ body {
   display: none !important;
 }
 
+.heart-sharp {
+  color: red;
+}
+
 @media (max-width: 935px) {
   .sidebar {
     display: none;
