--- a/public/style.css
+++ b/public/style.css
@@ -90,6 +90,9 @@ body {
 
 .sidebar {
   width: 293px;
+  padding-top: 24px;
+  position: sticky;
+  top: 88px;
 }
 
 .stories {
@@ -188,6 +191,10 @@ body {
   cursor: pointer;
 }
 
+.conteudo {
+  position: relative;
+}
+
 .post .conteudo img {
   width: 100%;
 }
@@ -201,6 +208,10 @@ body {
 
 .post .fundo .acoes div:first-child ion-icon {
   margin-right: 6px;
+}
+
+.post .fundo .acoes ion-icon:not(:first-child):hover {
+  color: gray;
 }
 
 .post .fundo .curtidas {
@@ -218,12 +229,6 @@ body {
 
 .post:last-child {
   margin-bottom: 18px;
-}
-
-.sidebar {
-  padding-top: 24px;
-  position: sticky;
-  top: 88px;
 }
 
 .sidebar > .usuario {
@@ -320,8 +325,53 @@ body {
   display: none !important;
 }
 
+.heart-outline:hover {
+  color: gray;
+}
+
 .heart-sharp {
   color: red;
+  animation-name: pulse;
+  animation-duration: 0.3s;
+}
+
+@keyframes pulse {
+  50% {
+    transform: scale(1.3);
+  }
+}
+
+.conteudo ion-icon {
+  position: absolute;
+  font-size: 200px;
+  bottom: 35%;
+  left: 35%;
+  color: white;
+  opacity: 0.9;
+  transform: scale(0);
+}
+
+.like-heart {
+  animation-name: like;
+  animation-duration: 1s;
+}
+
+@keyframes like {
+  5% {
+    transform: scale(0.5);
+  }
+  10% {
+    transform: scale(1.2);
+  }
+  15% {
+    transform: scale(1);
+  }
+  85% {
+    transform: scale(1);
+  }
+  95% {
+    transform: scale(0.5);
+  }
 }
 
 @media (max-width: 935px) {
